--- a/Coffee_backery_Code/css/style.css
+++ b/Coffee_backery_Code/css/style.css
@@ -43,6 +43,10 @@ li, a{
 ul, menu{
   padding: 0;
 }
+
+button{
+  display: none;
+}
 /******************************************
 /* Fonts
 /*******************************************/
@@ -731,3 +735,16 @@ footer{
     
 }
 
+ /******************************************
+/* Accesscibilety
+/*******************************************/
+
+.sr-only:not(:focus):not(:active) {
+  clip: rect(0 0 0 0); 
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap; 
+  width: 1px;
+}
