--- a/Coffee_backery_Code/css/style.css
+++ b/Coffee_backery_Code/css/style.css
@@ -686,11 +686,11 @@ footer{
       background-color: var(--main-clr-01);
   
       transform: translateY(-100%);
+      transition: transform 350ms ease-out;
     }
 
     .nav-body[data-visible="true"]{
       transform: translateY(0%) !important;
-      background-color: pink !important;
     }
 
     
