--- a/Coffee_backery_Code/css/style.css
+++ b/Coffee_backery_Code/css/style.css
@@ -692,7 +692,17 @@ footer{
     }
 
     .nav-body[data-visible="true"]{
-      transform: translateY(0%) !important;
+      transform: translateY(0%);
+    }
+
+    .nav-body li a{
+      opacity: 0;
+
+      transition: opacity 350ms ease-out;
+    }
+
+    .nav-body[data-visible="true"] li a{
+      opacity: 1;
     }
 
     .mobile-nav-toggle[aria-expanded="true"]{
