--- a/Coffee_backery_Code/css/style.css
+++ b/Coffee_backery_Code/css/style.css
@@ -466,17 +466,34 @@ header nav>ul>*{
         /*Omited some stuff, just a note to keep  in minnd for down the line if needed*/
 
       .carousel__track-container{
-        background: lightgreen;
+        /* background: lightgreen; */
+        position: relative;
         padding: 10px;
         height: 100%;
       }
 
       .carousel__slide{
-        background-color: green;
+        /* background-color: green; */
         position: absolute;
         top: 0;
         bottom: 0;
         width: 100%;
+      }
+
+      .carousel__button {
+        background-color: red;
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        cursor: pointer;
+      }
+
+      /* .carousel__button--left {
+        left: 0;
+      } */
+
+      .carousel__button--right {
+        right: -25px;
       }
 
 /* Footer */
