--- a/Coffee_backery_Code/css/style.css
+++ b/Coffee_backery_Code/css/style.css
@@ -481,16 +481,16 @@ header nav>ul>*{
       }
 
       .carousel__button {
-        background-color: red;
         position: absolute;
+        z-index: 9999;
         top: 50%;
         transform: translateY(-50%);
         cursor: pointer;
       }
 
-      /* .carousel__button--left {
+      .carousel__button--left {
         left: 0;
-      } */
+      }
 
       .carousel__button--right {
         right: -25px;
