--- a/Coffee_backery_Code/css/style.css
+++ b/Coffee_backery_Code/css/style.css
@@ -496,6 +496,24 @@ header nav>ul>*{
         right: -25px;
       }
 
+      .carousel__nav--bottom {
+        display: flex;
+        justify-content: center;
+        padding: 10px 0;
+      }
+
+      .carousel__indicator{
+        border-radius: 50%;
+        width: 20px;
+        height: 20px;
+        background-color: var(--accent-clr-02);
+        margin: 0 12px;
+      }
+
+      .current-slide {
+        background-color: var(--accent-clr-03);
+      }
+
 /* Footer */
 
 footer{
