--- a/Coffee_backery_Code/css/style.css
+++ b/Coffee_backery_Code/css/style.css
@@ -222,6 +222,13 @@ header nav>ul>*{
   display: none;
 }
 
+.hoverGlow a {
+  margin: 0;
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
 /*MINI LOGO*/
 
   .mini-logo{
@@ -587,7 +594,7 @@ footer{
   text-decoration: none;
   color: var(--focus-clr);
   position: relative;
-
+  padding: 0;
 }
 
 .hoverGlow::after{
