--- a/css/style.css
+++ b/css/style.css
@@ -636,14 +636,14 @@ footer{
   cursor: pointer
 }
 
-.menuGlow.current-slide{
+/* .menuGlow.current-slide{
   border-radius: 55px;
   background-image: radial-gradient(var(--accent-clr-03),  rgba(72, 153, 169, 0));
 }
 
 .current-slide .menuBgGlow{
   color: var(--white-clr);
-}
+} */
 
 
 .menuGlow::after{
