--- a/css/style.css
+++ b/css/style.css
@@ -795,7 +795,17 @@ li.current-slide:hover{
       top: 3.2rem; 
       right: 1.8vw;
     }
-    
+
+}
+
+@media (max-width: 1022px) {
+
+    /*Product Display*/
+
+    .carousel {
+      height: max(180vw, 900px);
+    }
+
 }
 
  /******************************************
