--- a/css/style.css
+++ b/css/style.css
@@ -165,6 +165,7 @@ a{
   background-size: cover;
   background-position: top ;
   background-color: var(--accent-clr-01);
+  /* min-width: 100vw; */
 }
 
 .bg-img-02{
@@ -179,7 +180,7 @@ a{
 body{
   display: flex;
   flex-direction: column;
-  min-width: 320px;
+  min-width: 100vw;
 }
 
 /*Header*/
@@ -247,8 +248,6 @@ header nav>ul>*{
   .mini-logo-anchor{
     position: absolute;
   }
-
-  
 
 /*Big logo section Home*/
 
