--- a/css/style.css
+++ b/css/style.css
@@ -238,12 +238,6 @@ header nav>ul>*{
 
 /*MINI LOGO*/
 
-  .mini-logo__div img{
-    border: 10px solid red;
-   
-
-  }
-
   .mini-logo__div{
     display: flex;
     justify-content: center;
@@ -819,8 +813,20 @@ li.current-slide:hover{
 }
 
 @media (max-width: 494px){
+  .mini-logo-anchor img {
+    width: 50%;
+  }
+  body{
+    width: 100%;
+  }
+
+  .bg-img{
+    /* border: 5px solid green; */
+
+    width: 100% !important;
+  }
   
-}
+} 
 
  /******************************************
 /* Accesscibilety
