Adjust: scaling html, playing around with meta tag for scaling for font accessibilety purposes

--- a/css/style.css
+++ b/css/style.css
@@ -857,3 +857,7 @@ html {
   scroll-padding: 10rem;
 }
  
+
+/******************************************
+/* TESTING DIFFERENT METHODS
+/*******************************************/
