Add: media querry (494px) come visit section sizing adjust

--- a/css/style.css
+++ b/css/style.css
@@ -826,6 +826,14 @@ li.current-slide:hover{
   .about-us p{
     width: 80%;
   }
+
+
+  /*Come Visit*/
+
+  .come-visit-section{
+    padding: 2.5rem;
+    width: 85%;
+  }
   
 } 
 
